--- a/1/test.htm
+++ b/1/test.htm
@@ -3,25 +3,25 @@
 <head>
 <title>Homepage</title>
 </head>
-<body>
-<h3>兩百字內的個人簡介。</h3>
-我是陳昱軒，畢業於宜蘭大學電子工程系，大學畢業後在成功嶺服役一年，退伍後因為當時有些嚮往國外的生活，於是到澳洲打工度假了兩年，去過澳洲雪梨、布里斯本、達爾文、凱恩斯、柏斯等城市，主要是做農場和工廠相關工作。回台灣後有在家做過一段時間的電商，同時也在自學程式設計，我肯勤奮學習，做事細心並追求效率，自我管理能力良好，吩咐的事都盡可能做到最好。
-<h3>為了成為軟體工程師，曾做過什麼努力？</h3>
-大學期間我讀的是電子工程系，有修過計算機與網路學程，學校的課程有修過C語言、Visual Basic、Java、SQL資料庫系統，我會用VB6做一些簡單的計算用的exe檔，也會用Jave做一些簡單的app放到手機上執行。近期也有在youtube上學Python。
-<h3>如果參與這個計劃，你會怎麼安排學習時間？</h3>
-在招生說明會有聽老師提到這個計畫會需要每周花60~70小時，為期六個月。我目前是從前一陣子澳洲打工度假回國後就在待業，偶而會需要幫忙用點腦幫忙處理一些網拍和日本代購的訂單，補貼家用，一天不超過兩小時。所以我相信我有足夠的時間和決心參加這個WeHelp Bootcamp計畫。
-<h3>是否有想加入的軟體公司？為什麼想加入該公司？</h3>
-像Google、Microsoft算是台灣頂級的外商軟體公司，還有像Appier、Avance Venture Lab、Botrista是頂級的新創公司，會想加入這些公司主要還是因為有打聽到這幾間的薪資福利基本都在年薪100萬以上，所以想把這幾間公司當作目標。
+<body style ="background-color: #95CACA">
+<h3 style="color: #616130">兩百字內的個人簡介。</h3>
+<div style="color: #007500">我是陳昱軒，畢業於宜蘭大學電子工程系，大學畢業後在成功嶺服役一年，退伍後因為當時有些嚮往國外的生活，於是到澳洲打工度假了兩年，去過澳洲雪梨、布里斯本、達爾文、凱恩斯、柏斯等城市，主要是做農場和工廠相關工作。回台灣後有在家做過一段時間的電商，同時也在自學程式設計，我肯勤奮學習，做事細心並追求效率，自我管理能力良好，吩咐的事都盡可能做到最好。</div>
+<h3 style="color: #616130">為了成為軟體工程師，曾做過什麼努力？</h3>
+<div style="color: #007500">大學期間我讀的是電子工程系，有修過計算機與網路學程，學校的課程有修過C語言、Visual Basic、Java、SQL資料庫系統，我會用VB6做一些簡單的計算用的exe檔，也會用Jave做一些簡單的app放到手機上執行。近期也有在youtube上學Python。</div>
+<h3 style="color: #616130">如果參與這個計劃，你會怎麼安排學習時間？</h3>
+<div style="color: #007500">在招生說明會有聽老師提到這個計畫會需要每周花60~70小時，為期六個月。我目前是從前一陣子澳洲打工度假回國後就在待業，偶而會需要幫忙用點腦幫忙處理一些網拍和日本代購的訂單，補貼家用，一天不超過兩小時。所以我相信我有足夠的時間和決心參加這個WeHelp Bootcamp計畫。</div>
+<h3 style="color: #616130">是否有想加入的軟體公司？為什麼想加入該公司？</h3>
+<div style="color: #007500">像Google、Microsoft算是台灣頂級的外商軟體公司，還有像Appier、Avance Venture Lab、Botrista是頂級的新創公司，會想加入這些公司主要還是因為有打聽到這幾間的薪資福利基本都在年薪100萬以上，所以想把這幾間公司當作目標。</div>
 
 
-<h3>請描述一件你曾經碰到最困難的事情，如何克服？</h3>
-之前在澳洲打工度假初期時，當時是在全英文環境的工廠工作，因為英文口語和聽力不夠好，所以常常和同事或領導在溝通上會有困難，影響到工作的效率。
+<h3 style="color: #616130">請描述一件你曾經碰到最困難的事情，如何克服？</h3>
+<div style="color: #007500">之前在澳洲打工度假初期時，當時是在全英文環境的工廠工作，因為英文口語和聽力不夠好，所以常常和同事或領導在溝通上會有困難，影響到工作的效率。
 後來開始學著記下工廠工作常會用到但我不熟悉的幾個單詞。在與同事對話上，如果對方不太確定我要表達的意思，就換個較簡單的方式表達。同時回想在對談中有沒有不適當的動作，導致對方反感等等。在下班時間也常常看英文演講影片與相關書籍來學習，並時常和外國朋友交流，終於讓我的英文口說和聽力有了大幅度的進步！
-後來工作也越來越順利，也深受領導的肯定與信賴！
+後來工作也越來越順利，也深受領導的肯定與信賴！</div>
 
 
-<h3>關於這份申請網頁，請分享一個你開發時使用的技術心得。</h3>
-藉由這次申請網頁讓我學會如何使用html檔做一個簡單的網頁並藉由github page上傳到網路上，這讓我對網路工程有了初步的了解，雖然感覺算是很基礎的網頁，但也算是一個小小的成品，也激發我對網頁工程的興趣，也希望能錄取Wehelp bootcamp，能藉由老師的引導，能讓我更深入學習網路工程的相關技術。
+<h3 style="color: #616130">關於這份申請網頁，請分享一個你開發時使用的技術心得。</h3>
+<div style="color: #007500">藉由這次申請網頁讓我學會如何使用html檔做一個簡單的網頁並藉由github page上傳到網路上，這讓我對網路工程有了初步的了解，雖然感覺算是很基礎的網頁，但也算是一個小小的成品，也激發我對網頁工程的興趣，也希望能錄取Wehelp bootcamp，能藉由老師的引導，能讓我更深入學習網路工程的相關技術。</div>
 
 <a href="https://www.facebook.com/profile.php?id=100000490496013">
 <h3>我的Facebook</h3></a>
